blocks/columns/columns.css
.columns > div {
  display: flex;
  flex-direction: column;
}

.columns img {
  max-width: 100%;
  object-fit: scale-down;
}

.columns > div > div {
  order: 1;
  margin-bottom: 2rem;
}

.columns.emphasized > div {
  align-items: stretch;
  margin-bottom: 1.5rem;
}

.columns.emphasized > div > div {
  border: 1px solid var(--color-gray-light);
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  text-align: center;
  gap: 1rem;
}

.columns.emphasized > div > div::before,
.columns.emphasized > div > div::after {
  display: block;
  content: '';
}

.columns.emphasized > div > div > * {
  padding: 0;
  margin: 0;
}

.columns.emphasized > div > div > *:nth-last-child(2) {
  flex: 1;
}

.columns.emphasized > div > div > p:not(.button-container) {
  padding: 0 .5rem;
}

.columns.cards > div{
  align-items: stretch;
}
.columns.cards > div > div {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  border-radius: 1rem;
  color: var(  --text-color);
  border: 1px solid #D0D0D6;
  gap: 8px;
  padding-bottom: 24px;
}
.columns.cards > div > div > p:first-of-type > picture > img:first-of-type {
  width: 100%;
  object-fit: cover;
  border-collapse: separate;
  margin-bottom: 10px;
}
.columns.cards > div > div > h3 {
  font-size: 20px;
  line-height: 28px;
}
.columns.cards > div  > div > h3::after {
  display: inline-block;
  content: '';
  margin-left: .8rem;
  margin-bottom: 4px;
  height: 16px;
  width: 16px;
  background: var(--text-color);
  -webkit-mask: url('../../icons/circle-check.svg') no-repeat center center;
  mask: url('../../icons/circle-check.svg') no-repeat center center;
  vertical-align: middle;
} 
.columns.cards > div > div > h3{
  color: var(--text-color);
}
.columns.cards > div > div > p > em {
  font-style: normal;
  color: #666A6C;
  font-size: 14px;
  line-height: 28px;
}
.columns.cards > div > div > p:not(:first-of-type){
  font-size: var(--body-font-size-default);
  margin-bottom: var(--body-font-size-default);
}
.columns.cards > div > div > p:not(:first-of-type),
.columns.cards > div > div > h3 {
  padding: 0 16px;
  margin: 0;
}
.columns.cards > div > div > p:last-of-type{
  margin-bottom: 0;
  font-size: 16px;
  line-height: 24px;
}
.section.highlight > div > .columns.cards > div > div {
  align-items: center;
  padding: 32px;
  box-shadow: 0px 4px 16px #000;
  background-color: var(  --background-color);
}
.section.highlight > div > .columns.cards > div > div h3 {
  font-size: 26px;
  line-height: 36px;
}
.section.highlight > div > .columns.cards > div > div h3::after {
  content: none;
}
.section.highlight > div > .columns.cards > div > div p{
  text-align: center;
  font-size: 18px;
  line-height: 28px;
}
.columns > div > .columns-img-col {
  order: 0;
}

.columns > div > .columns-img-col img {
  display: block;
}

.columns hr {
  background-color: var(--highlight-color);
  height: 3px;
  width: 25px;
}

@media (min-width: 900px) {
  .columns > div {
    align-items: start;
    flex-direction: unset;
    gap: 32px;
  }

  .columns > div > div {
    flex: 1;
    order: unset;
    margin-bottom: 0;
  }
}

